# cpp-todo

./: .gitignore  CMakeLists.txt  app.mjs  index.html  main.cpp  todo.pb.cc  todo.pb.h  todo.proto  vcpkg.json
frontend/: app.mjs  index.html
frontend/components/: App.vue
